versioned_docs/version-4.0.x/image_formats_support.mdx
---
description: Learn about image formats supported by imgproxy
---

# Image formats support

At the moment, imgproxy supports only the most popular image formats:

| Format                      | Extension | Source                         | Result                    |
| ----------------------------|-----------|--------------------------------|---------------------------|
| PNG                         | `png`     | :white_check_mark:             | :white_check_mark:        |
| JPEG                        | `jpg`     | :white_check_mark:             | :white_check_mark:        |
| JPEG XL                     | `jxl`     | :white_check_mark:             | [See notes](#jxl-support) |
| WebP                        | `webp`    | :white_check_mark:             | :white_check_mark:        |
| AVIF                        | `avif`    | :white_check_mark:             | :white_check_mark:        |
| GIF                         | `gif`     | :white_check_mark:             | :white_check_mark:        |
| ICO                         | `ico`     | :white_check_mark:             | :white_check_mark:        |
| SVG                         | `svg`     | :white_check_mark:             | [See notes](#svg-support) |
| HEIC                        | `heic`    | :white_check_mark:             | :white_check_mark:        |
| BMP                         | `bmp`     | :white_check_mark:             | :white_check_mark:        |
| TIFF                        | `tiff`    | :white_check_mark:             | :white_check_mark:        |
| PDF ((pro))                 | `pdf`     | :white_check_mark:             | [See notes](#pdf-support) |
| PSD ((pro))                 | `psd`     | [See notes](#psd-support)      | :x:                       |
| RAW ((pro))                 |           | [See notes](#raw-support)      | :x:                       |
| MP4 (h264) ((pro))          | `mp4`     | [See notes](#video-thumbnails) | :white_check_mark:        |
| Other video formats ((pro)) |           | [See notes](#video-thumbnails) | :x:                       |

## JPEG XL support {#jxl-support}

imgproxy supports JPEG XL as a source format without limitations.

When JPEG XL is used as a result format, animations are not supported because animated JPEG XL is not yet supported by browsers.

## SVG support

imgproxy supports SVG sources without limitations, but SVG results are not supported when the source image is not SVG.

When the source image is SVG and an SVG result is requested, imgproxy returns the source image without modifications.

## Animated images support

Since the processing of animated images is a pretty heavy process, only one frame is processed by default. You can increase the maximum of animation frames to process with the following variable:

* `IMGPROXY_MAX_ANIMATION_FRAMES`: the maximum of animated image frames to be processed. Default: `1`.

:::info
imgproxy summarizes all frames resolutions while the checking source image resolution.
:::

## PDF support ((pro)) {#pdf-support}

imgproxy supports PDF both as a source and result format.

When PDF is used as a source, imgproxy renders the specified pages as raster images.

When PDF is used as a result format, imgproxy renders the image as a JPEG image and embeds it into a single-page PDF document.

## PSD support ((pro)) {#psd-support}

PSD (Photoshop Document) and PSB (Photoshop Big) files are supported as source images, but there are some limitations:

PSD/PSB files should be saved with Photoshop's "Maximize Compatibility" option enabled, which is enabled by default. If this option is disabled, imgproxy won't return an error but will render the PSD/PSB file as a solid white image.

We tested imgproxy with all variants of PSD/PSB files that we could find or produce with Adobe Photoshop 2025. If you encounter any PSD/PSB file that imgproxy can't process, please let us know.

:::warning
We couldn't find any PSD/PSB files with their image data compressed with ZIP, so imgproxy renders them as solid white images. If you had such files, we would very much appreciate it if you could share them with us.
:::

## RAW support ((pro)) {#raw-support}

RAW image formats from digital cameras are supported as source images only (read-only). RAW files are decoded and converted to standard image formats during processing.

imgproxy uses [libraw](https://www.libraw.org/) to process RAW files. For a complete list of supported camera models and RAW formats, see the [libraw supported cameras list](https://www.libraw.org/supported-cameras).

:::warning
Since loading RAW images is pretty resource intensive, their processing is disabled by default. You can enable it with the [`IMGPROXY_ENABLE_RAW_FORMATS`](configuration/options.mdx#raw-formats) configuration variable.
:::

## Converting animated images to MP4 ((pro)) {#converting-animated-images-to-mp4}

Animated image results can be converted to MP4 by specifying the `mp4` extension.

Since MP4 requires use of a `<video>` tag instead of `<img>`, automatic conversion to MP4 is not provided.

## Video thumbnails ((pro)) {#video-thumbnails}

If you provide a video as a source, imgproxy takes a specific frame to create a thumbnail. To do this, imgproxy downloads only the amount of data required to reach the needed frame.

Since this still requires more data to be downloaded, video thumbnail generation is disabled by default and should be enabled with `IMGPROXY_ENABLE_VIDEO_THUMBNAILS` config option.

* `IMGPROXY_ENABLE_VIDEO_THUMBNAILS`: when true, enables video thumbnail generation. Default: `false`
* `IMGPROXY_VIDEO_THUMBNAIL_SECOND`: the timestamp of the frame (in seconds) that will be used for the thumbnail. Default: `1`.

## Colorspace and HDR preservation

imgproxy always preserves the source image's colorspace:

* Color images remain color images.
* Grayscale images remain grayscale images.
* Colorspace types are maintained.

The bit depth handling depends on the [IMGPROXY_PRESERVE_HDR](configuration/options.mdx#IMGPROXY_PRESERVE_HDR) configuration setting:

**When `IMGPROXY_PRESERVE_HDR` is enabled:**

* High bit images remain high bit in the output (eg, GRAYSCALE16 remains GRAYSCALE16, RGB16 stays RGB16, scRGB becomes RGB16)

**When `IMGPROXY_PRESERVE_HDR` is disabled (default):**

* High bit images are converted to 8-bit (eg, GRAYSCALE16 becomes GRAYSCALE8, RGB, RGB16 and scRGB become sRGB)
* 8-bit images remain 8-bit
